# ChangeLog for www-apache/mod_autoindex_mb
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Aug 2009; Lance Albertson <ramereth@gentoo.org> +metadata.xml:
  QA Fixes

*mod_autoindex_mb-9999 (20 May 2009)

  20 May 2009; Lance Albertson <ramereth@gentoo.org>
  +mod_autoindex_mb-9999.ebuild:
  New subversion ebuild

  15 May 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
  New ebuild for mirrorbrain
