@@ -2,17 +2,19 @@
 Hash: SHA1
 
 AUX 60_mod_autoindex_mb.conf 124 RMD160 6cce179b1c5b2257b86e6645cb4649dab540d05c SHA1 f772c71d1b8db34f863270d5a3b7069e4c432123 SHA256 46b7a0dff6b8a0f9c813164dcf4ccd22d57538381192b0a79490ffcc815557ed
+DIST mirrorbrain-2.11.3.tar.gz 356242 RMD160 138bad4b52622e93069640414fee3fee365e135f SHA1 bb9f02aca01d6b1494f6067dd2bff1125c092e7d SHA256 cf18c3863f064463413744c4a537b3180bbbfbfd27d69a313236498a898af03e
 DIST mirrorbrain-2.8.1.tar.gz 308537 RMD160 5f3a1dc08c005e7151b7bba9030e08e1b18ed39b SHA1 929c9bd427b9d5d9b9aaf9bc256a20d08516ea27 SHA256 999262154d672e8c2339cbf67ec5ed9cf654a5767473893c91894b742c8f6bf5
 DIST mirrorbrain-2.8.tar.gz 307722 RMD160 83fccfc8bff5a9c07d38407b44681135c3741bb9 SHA1 79470b1c46b6fb861001e7ff9c903f41948eb8e8 SHA256 204ea49097da5502443d7f8a5f34181667486de6c0be227da7e4524cba146125
+EBUILD mod_autoindex_mb-2.11.3.ebuild 658 RMD160 1b0a8567fdb8b83f034552ef8182b7f55ff5d07b SHA1 4f7e750242a2e2b7f4cd91d6c3c097b8f9973ed6 SHA256 ed323a20928d8b6bcfc20c9630f12ebd2a843a033f49225979b11212aefea25f
 EBUILD mod_autoindex_mb-2.8.1.ebuild 650 RMD160 3723afd337f013220798013a8b2e3112302213aa SHA1 db5bacff40d7880f78476df1165e7f2fceb29e2e SHA256 9afb8964123b3e41e4e17e400f011fcdd691946a84f375995afa62f53380f8f0
 EBUILD mod_autoindex_mb-2.8.ebuild 650 RMD160 3723afd337f013220798013a8b2e3112302213aa SHA1 db5bacff40d7880f78476df1165e7f2fceb29e2e SHA256 9afb8964123b3e41e4e17e400f011fcdd691946a84f375995afa62f53380f8f0
 EBUILD mod_autoindex_mb-9999.ebuild 711 RMD160 4e466226de43ab9cb827a829081b277c7e23e701 SHA1 bdd777e8ef6f1117b93a0976e35f5bc17a5eb36a SHA256 b0b1ea0350be108434b26babc489d338d3bb9d43b04ba6c7bcc085b9e0125278
-MISC ChangeLog 451 RMD160 9cf9ecadce5bb56efa8b869a2e1efd94f9af9946 SHA1 8923c939250eb2fc977f824829ab70bd854ee8ff SHA256 2cbf33246789257e5d745289988afffda892929a9483943969da8d8d63dd23f7
+MISC ChangeLog 595 RMD160 c698b90e47133f65c4246707e34c646681a6f09d SHA1 305613a688bcccae888133a019fd4a6764be56a3 SHA256 d6c9fbc4244da2aa563d16f1b2bf6abcd714304ee60aca6ba12921523a144d8f
 MISC metadata.xml 384 RMD160 00123529a185b326bfcaa3402104f4ac28611f72 SHA1 cb880d44be58df0b341401f08772fb3fd2b3b806 SHA256 9c5c74070da1d3b4cdd4d1b9d5f88ad7a824698c1c58b9fb3e9ef964724ea14a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFKlTXSQW+hXSf0t0IRAgVZAJ0Sfh+vxbe08zK+bzGxKrdQOXqrMgCeI2Gj
-ta9PNlQopWzHr84kkM4OSJw=
-=/AFP
+iD8DBQFLKdtIQW+hXSf0t0IRApRxAKDH8ZrrMmTUObfxycVAz3JDUUUEuQCgzxw8
+kjGuiHKBYS5KxzKQVbqOpSE=
+=6r7t
 -----END PGP SIGNATURE-----
