@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mod_autoindex_mb-2.11.3 (17 Dec 2009)
+
+  17 Dec 2009; Lance Albertson <ramereth@gentoo.org>
+  +mod_autoindex_mb-2.11.3.ebuild:
+  Version bump
+
   26 Aug 2009; Lance Albertson <ramereth@gentoo.org> +metadata.xml:
   QA Fixes
 
